Add Nats Server

--- a/.env.template
+++ b/.env.template
@@ -1,10 +1,12 @@
 PORT=3000
 
 PRODUCT_MICROSERVICE_HOST=localhost
-PRODUCT_MICROSERVICE_PORT=4001
+PRODUCT_MICROSERVICE_PORT=4002
 
 PAGE=1
 LIMIT=10
 
 ORDER_MICROSERVICE_HOST=localhost
 ORDER_MICROSERVICE_PORT=4001
+
+NATS_SERVERS="nats://localhost:4222,nats://localhost:4223"
